<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/addapp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drugname"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="52dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dosenumber"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startdrug"
            android:id="@+id/textView3"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="54dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drugperiod"
            android:id="@+id/textView4"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_above="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:text="@string/drugnamefield" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:layout_above="@+id/textView3"
            android:text="@string/dosenumberfield"
            android:layout_toLeftOf="@+id/editText"
            android:layout_toStartOf="@+id/editText" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="52dp"
            android:layout_marginEnd="52dp"
            android:text="@string/startdrugfield"
            android:layout_alignLeft="@+id/editText2"
            android:layout_alignStart="@+id/editText2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText4"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignRight="@+id/editText3"
            android:layout_alignEnd="@+id/editText3"
            android:text="@string/drugperiodfield"
            android:layout_alignLeft="@+id/editText"
            android:layout_alignStart="@+id/editText" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addnewappointment"
            android:id="@+id/button3"
            android:layout_marginTop="103dp"
            android:onClick="addAppointment"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</LinearLayout>
